<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/edit_text_file_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textColorHint="@color/grey"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:hint="@string/enter_new_name"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:scrollHorizontally="true" />

                <TextView
                    android:id="@+id/extension_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@color/white"
                    android:text="@string/file_extension"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel_rename"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_rename"
                app:layout_constraintEnd_toStartOf="@+id/btn_rename"
                app:layout_constraintTop_toTopOf="@+id/btn_rename"
                app:strokeColor="@color/color_2" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_rename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/recording_item_menu_option_rename"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>